--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,7 +26,7 @@
                 "isDefault": true
             },
             "windows": {
-                "command": "ocaml -init \\\"${file}\\\""
+                "command": "C:\\OCaml64\\usr\\local\\bin\\ocaml-env.exe exec -- C:\\OCaml64\\home\\Uporabnik\\.opam\\4.14.0+mingw64c\\bin\\ocaml.exe -init \\\"${file}\\\""
                 },
             "linux": {
                 "command": "ocaml -init \"${file}\""
